--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         }
     ],
     "require": {
-        "php": "^8.1"
+        "php": "^8.1",
+        "konnec/vue-eloquent-api": "^0.5.6"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
@@ -45,7 +46,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Konnec\\Debuggin\\Providers\\ServiceProvider"
+                "Konnec\\Debugging\\Providers\\ServiceProvider",
+                "Konnec\\Debuggin\\Providers\\RouteServiceProvider"
             ]
         }
     },
